--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -19,7 +19,7 @@
             .line-container {
                 width: 60px;
                 display: block;
-                margin: 50px auto;
+               /* proužek pod headerem */
                 padding: 8px 10px;
                 transition: all 0.5s;
                 -webkit-transition: all 0.5s;
