--- a/individual-work/pitra-2k-web-figma-1/styles/_information-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_information-section-module.scss
@@ -12,6 +12,8 @@
       width: 60vw;
       img{
         margin-right: 6vw;
+        filter: drop-shadow(0px 0px 8px black);
+
       }
       .section-content-item:nth-child(1) {
         @include contact-section-informations;
