--- a/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
@@ -1,9 +1,11 @@
 .contact-content-container {
     border: 1px red solid;
+    display: flex;
+    justify-content: center;
     .contact-content-sub-container {
         border: 1px blue solid;
         display: flex;
-        flex-direction: row;
-        justify-content: center;
+        flex-direction: column;
+        align-items: space-between;
     }
 }
