--- a/individual-work/pitra-2k-web-figma-1/styles/_information-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_information-section-module.scss
@@ -8,6 +8,7 @@
       display: flex;
       flex-flow: column;
       justify-content: space-evenly; 
+      align-items: center;
       /* align-items: space-evenly; */
       width: 60vw;
       img{
