--- a/individual-work/pitra-2k-web-figma-1/styles/_mixin.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_mixin.scss
@@ -16,7 +16,7 @@
   justify-content: center;
   padding: 0.8em;
   h3 {
-    font-size: 0.85rem;
+    font-size: .8rem;
     letter-spacing: 1px;
   }
   p {
