--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -21,6 +21,9 @@
         }
     }
     .offers-section {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
         .offers-section-heading {
             /* border: 1px red solid; */
             margin-top: 2.3em;
