--- a/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
@@ -5,7 +5,7 @@
     /* 
     justify-content: center;
     align-items: center; */
-    height: 80vh;
+    max-height: 80vh;
     .contact-content-sub-container {
         height: 75vh;
         display: flex;
