--- a/individual-work/pitra-2k-web-figma-1/styles/_mixin.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_mixin.scss
@@ -16,12 +16,12 @@
   justify-content: center;
   padding: 0.8em;
   h3 {
-    font-size: .8rem;
+    font-size: 4vw;
     letter-spacing: 1px;
   }
   p {
     margin-top: 0.6em;
-    font-size: 0.6rem;
+    font-size: 3vw;
     color: #777774;
   }
 }
