--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -13,7 +13,7 @@ body {
   background-color: #cbc1b1;
   position: relative;
   z-index: 9;
-  height: 10vh;
+  max-height: 10vh;
 }
 
 .nav-bar-container .nav-bar-sub-container {
@@ -155,13 +155,13 @@ body {
 }
 
 .content-container .offers-section .offer-section-1 .sub-offer-section-1 h3 {
-  font-size: .8rem;
+  font-size: 4vw;
   letter-spacing: 1px;
 }
 
 .content-container .offers-section .offer-section-1 .sub-offer-section-1 p {
   margin-top: 0.6em;
-  font-size: 0.6rem;
+  font-size: 3vw;
   color: #777774;
 }
 
@@ -198,13 +198,13 @@ body {
 }
 
 .content-container .offers-section .offer-section-2 .sub-offer-section-2 h3 {
-  font-size: .8rem;
+  font-size: 4vw;
   letter-spacing: 1px;
 }
 
 .content-container .offers-section .offer-section-2 .sub-offer-section-2 p {
   margin-top: 0.6em;
-  font-size: 0.6rem;
+  font-size: 3vw;
   color: #777774;
 }
 
@@ -241,13 +241,13 @@ body {
 }
 
 .content-container .offers-section .offer-section-3 .sub-offer-section-3 h3 {
-  font-size: .8rem;
+  font-size: 4vw;
   letter-spacing: 1px;
 }
 
 .content-container .offers-section .offer-section-3 .sub-offer-section-3 p {
   margin-top: 0.6em;
-  font-size: 0.6rem;
+  font-size: 3vw;
   color: #777774;
 }
 
@@ -273,7 +273,10 @@ body {
 
 .footer-container {
   background-color: #cbc1b1;
-  height: 10vh;
+  max-height: 10vh;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-container .footer-information {
@@ -430,7 +433,7 @@ body {
   /* 
     justify-content: center;
     align-items: center; */
-  height: 80vh;
+  max-height: 80vh;
 }
 
 .contact-content-container .contact-content-sub-container {
