--- a/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
@@ -5,17 +5,39 @@
     /* 
     justify-content: center;
     align-items: center; */
-    max-height: 80vh;
+    height: 80vh;
     .contact-content-sub-container {
         height: 75vh;
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 0vh 2vw 0vh 2vw;
-        justify-content: space-evenly;  
-       .contact-content-sub-item:nth-child(6){
-          padding-bottom: 12vh;
-          border: 1px red solid;
-       }      
+        margin: 7vh 3vw 7vh 3vw;
+        justify-content: space-between;
+
+        input {
+            background-color: #cdcac7;
+            border: 1px solid #cdcac7;
+        }
+        .contact-content-sub-item:nth-child(2)
+        {
+            margin-top: 5vh; /* dodělat mezery mezi inputy */
+        }
+        .contact-content-sub-item:nth-child(6) {
+            border: 1px rgb(0, 38, 255) solid;
+            height: 12vh;
+        }
+    }
+    .registration-button-contact {
+        display: flex;
+        justify-content: center;
+        margin-top: 2.3em;
+        button {
+            padding: 1% 1.5em 1% 1.5em;
+            background-color: #a19b98;
+            border: #a19b98 1px solid;
+            font-size: 0.9rem;
+            box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
+            color: $general-background-color;
+        }
     }
 }
