--- a/individual-work/pitra-2k-web-figma-1/styles/_footer.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_footer.scss
@@ -1,10 +1,10 @@
-.footer-container{
+.footer-container {
     background-color: $header-and-footer-background-color;
-    max-height: 10vh;
+    height: 10vh;
     position: fixed;
     bottom: 0;
     width: 100%;
-    .footer-information{
+    .footer-information {
         padding: 1em 0 1em 0;
         display: flex;
         flex-direction: column;
