--- a/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
@@ -11,7 +11,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 7vh 3vw 7vh 3vw;
+        margin: 7vh 3vw 6vh 3vw;
         justify-content: space-between;
 
         input {
@@ -20,11 +20,15 @@
         }
         .contact-content-sub-item:nth-child(2)
         {
-            margin-top: 5vh; /* dodělat mezery mezi inputy */
+            margin-top: 1vh; /* dodělat mezery mezi inputy */
         }
         .contact-content-sub-item:nth-child(6) {
             border: 1px rgb(0, 38, 255) solid;
-            height: 12vh;
+            
+            input{
+                
+                height: 15vh;
+            }
         }
     }
     .registration-button-contact {
