--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -8,6 +8,7 @@
         justify-content: space-between;
         align-items: center;
         height: 80px;
+        border: 1px solid red;
         margin: 0 1.6em 0 1.6em;
 
         .nav-button {
@@ -48,7 +49,9 @@
 @media only screen and (min-width: 1600px) and (min-height: 720px){
     
     .nav-bar-container{
-        
+        .nav-bar-sub-container{
+            
+        }
     }
 
 }
