--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -24,6 +24,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   height: 80px;
+  border: 1px solid red;
   margin: 0 1.6em 0 1.6em;
 }
 
@@ -272,6 +273,40 @@ body {
   -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
   color: #efeee9;
+}
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+  .content-container {
+    margin: 0;
+  }
+  .content-container .welcome-banner-container {
+    border: 1px blue solid;
+    background-image: url("/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/index-welcome-beach.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 60vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .content-container .welcome-banner-container .welcome-banner {
+    width: 20vw;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 0 1em 1em 0;
+    border-radius: 2px;
+  }
 }
 
 .footer-container {
