updates towards responsivity

--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -1,14 +1,16 @@
-.nav-bar-container {
-    background-color: $header-and-footer-background-color;
+.nav-bar-container {    
     /* position: relative;
     z-index: 9; */
-    height: 10vh; /* malý kousek pod - max-height */
+    height: 8vh; /* malý kousek pod - max-height */
+    background-color: $header-and-footer-background-color;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     .nav-bar-sub-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 80px;
-        border: 1px solid red;
         margin: 0 1.6em 0 1.6em;
 
         .nav-button {
@@ -48,10 +50,8 @@
 
 @media only screen and (min-width: 1600px) and (min-height: 720px){
     
-    .nav-bar-container{
-        .nav-bar-sub-container{
-            
-        }
-    }
+   .nav-bar-container{
+       height: 10vh;
+   }
 
 }
