--- a/individual-work/pitra-2k-web-figma-1/styles/_footer.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_footer.scss
@@ -1,13 +1,23 @@
-.footer-container {
+footer {
+    height: 8vh;
     background-color: $header-and-footer-background-color;
-    height: 10vh;
-    position: fixed;
+    position: relative; /* fixed smaže škvíru pod */
     bottom: 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     .footer-information {
         padding: 1em 0 1em 0;
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+}
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+    footer {
+        height: 10vh;
+        position: relative;
     }
 }
