--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -25,7 +25,6 @@
         align-items: center;
         flex-direction: column;
         .offers-section-heading {
-            border: 1px red solid;
             display: flex;
             flex-wrap: nowrap;
             margin-top: 2.3em;
@@ -70,6 +69,7 @@
     display: flex;
     justify-content: center;
     margin-top: 2.3em;
+    margin-bottom: 2.3em;
     button {
         padding: 1% 1.5em 1% 1.5em;
         background-color: #a19b98;
@@ -84,22 +84,29 @@
     .content-container {
         margin: 0;
         .welcome-banner-container {
-            border: 1px blue solid;
             background-image: url("/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/index-welcome-beach.png");
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
-            height: 60vh;
+            height: 70vh;
             display: flex;
             justify-content: end;
             flex-direction: column;
             align-items: flex-end;
-            .welcome-banner{    
+            .welcome-banner {
                 width: 20vw;
                 height: auto;
-                background-color: rgba(0, 0, 0, .5);
+                background-color: rgba(0, 0, 0, 0.5);
                 margin: 0 1em 1em 0;
                 border-radius: 2px;
+            }
+        }
+        .offers-section {
+            .offers-section-heading {
+                font-size: 3em;
+                font-weight: 600;
+                margin-top: 1.5em;
+                margin-bottom: 2.3em;
             }
         }
     }
