--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -1,16 +1,37 @@
 @charset "UTF-8";
+html,
 body {
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  background-color: #efeee9;
+  z-index: 1;
+  font-family: "Hubballi", cursive;
   /* font-family: 'Lato', sans-serif; */
   /* font-family: 'Smooch Sans', sans-serif; */
-  font-family: "Hubballi", cursive;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .nav-bar-container {
-  background-color: #cbc1b1;
   /* position: relative;
     z-index: 9; */
-  height: 10vh;
+  height: 8vh;
   /* malý kousek pod - max-height */
+  background-color: #cbc1b1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .nav-bar-container .nav-bar-sub-container {
@@ -24,7 +45,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
   height: 80px;
-  border: 1px solid red;
   margin: 0 1.6em 0 1.6em;
 }
 
@@ -60,6 +80,12 @@ body {
 
 .nav-bar-container .nav-bar-sub-container .nav-button .line-container div .three {
   width: 30px;
+}
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+  .nav-bar-container {
+    height: 10vh;
+  }
 }
 
 .content-container {
@@ -116,7 +142,6 @@ body {
 }
 
 .content-container .offers-section .offers-section-heading {
-  border: 1px red solid;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -263,6 +288,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 2.3em;
+  margin-bottom: 2.3em;
 }
 
 .registration-button button {
@@ -280,12 +306,11 @@ body {
     margin: 0;
   }
   .content-container .welcome-banner-container {
-    border: 1px blue solid;
     background-image: url("/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/index-welcome-beach.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 60vh;
+    height: 70vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -307,17 +332,34 @@ body {
     margin: 0 1em 1em 0;
     border-radius: 2px;
   }
+  .content-container .offers-section .offers-section-heading {
+    font-size: 3em;
+    font-weight: 600;
+    margin-top: 1.5em;
+    margin-bottom: 2.3em;
+  }
 }
 
-.footer-container {
+footer {
+  height: 8vh;
   background-color: #cbc1b1;
-  height: 10vh;
-  position: fixed;
+  position: relative;
+  /* fixed smaže škvíru pod */
   bottom: 0;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.footer-container .footer-information {
+footer .footer-information {
   padding: 1em 0 1em 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -331,8 +373,15 @@ body {
           align-items: center;
 }
 
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+  footer {
+    height: 10vh;
+    position: relative;
+  }
+}
+
 .section-content-container {
-  height: 80vh;
+  height: 84vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -471,7 +520,7 @@ body {
   /* 
     justify-content: center;
     align-items: center; */
-  height: 80vh;
+  height: 84vh;
 }
 
 .contact-content-container .contact-content-sub-container {
