--- a/individual-work/pitra-2k-web-figma-1/styles/_information-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_information-section-module.scss
@@ -1,38 +1,67 @@
 .section-content-container {
-    height: 84vh;
+  height: 84vh;
+  display: flex;
+  justify-content: center;
+  margin: 0 5vw 0 5vw;
+  .sub-section-content-container {
+    margin: 2vh 0 2vh 0;
     display: flex;
-    justify-content: center;
-    margin: 0 5vw 0 5vw;
-    .sub-section-content-container {
-      margin: 2vh 0 2vh 0;
-      display: flex;
-      flex-flow: column;
-      justify-content: space-evenly; 
-      align-items: center;
-      /* align-items: space-evenly; */
-      width: 60vw;
-      img{
-        margin-right: 6vw;
-        filter: drop-shadow(0px 0px 8px black);
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+    /* align-items: space-evenly; */
+    /* width: 60vw; */
+    img {
+      margin-right: 6vw;
+      filter: drop-shadow(0px 0px 8px black);
+    }
+    .section-content-item:nth-child(1) {
+      @include contact-section-informations;
+    }
+    .section-content-item:nth-child(2) {
+      @include contact-section-informations;
+    }
+    .section-content-item:nth-child(3) {
+      @include contact-section-informations;
+    }
+    .section-content-item:nth-child(4) {
+      @include contact-section-informations;
+    }
+    .section-content-item:nth-child(5) {
+      @include contact-section-informations;
+    }
+    .section-content-item:nth-child(6) {
+      @include contact-section-informations;
+    }
+  }
+}
 
-      }
+@media only screen and (min-width: 1600px) and (min-height: 720px){
+  .section-content-container {
+    .sub-section-content-container {
+      background-color: red;
+      display: grid;
+      grid-template-areas:
+        "A  B  C"
+        "D  E  F";
       .section-content-item:nth-child(1) {
-        @include contact-section-informations;
+        grid-area: A;
       }
       .section-content-item:nth-child(2) {
-        @include contact-section-informations;
+        grid-area: B;
       }
       .section-content-item:nth-child(3) {
-        @include contact-section-informations;
+        grid-area: C;
       }
       .section-content-item:nth-child(4) {
-        @include contact-section-informations;
+        grid-area: D;
       }
       .section-content-item:nth-child(5) {
-        @include contact-section-informations;
+        grid-area: E;
       }
       .section-content-item:nth-child(6) {
-        @include contact-section-informations;
+        grid-area: F;
       }
     }
   }
+}
