--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -94,11 +94,22 @@
             flex-direction: column;
             align-items: flex-end;
             .welcome-banner {
-                width: 20vw;
-                height: auto;
-                background-color: rgba(0, 0, 0, 0.5);
-                margin: 0 1em 1em 0;
+                width: 35vw;
+                background-color: rgba(0, 0, 0, 0.3);
+                margin: 0 1.5em 1.5em 0;
                 border-radius: 2px;
+                padding: 1em;
+                h1 {
+                    margin: 0.2em;
+                    font-size: 300%;
+                }
+                p {
+                    margin: 0.2em;
+                    font-size: 140%;
+                }
+                button {
+                    font-size: 130%;
+                }
             }
         }
         .offers-section {
@@ -107,6 +118,54 @@
                 font-weight: 600;
                 margin-top: 1.5em;
                 margin-bottom: 2.3em;
+            }
+            .offer-sections-container {
+                margin-right: 10vw;
+                margin-left: 10vw;
+                div[class^="offer-section-"] {
+                    margin-top: 0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+                div[class^="sub-offer-section-"] {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 12%;
+                    margin-left: 12%;
+                    h3 {
+                        font-size: 1.3rem;
+                    }
+                    p {
+                        font-size: 1.1rem;
+                    }
+                }
+
+                img {
+                    width: fit-content;
+                }
+
+                display: grid;
+                /*  gap: 2% 20%; */
+                grid-template-areas: "A  B  C";
+                .offer-section-1 {
+                    grid-area: A;
+                }
+                .offer-section-2 {
+                    grid-area: B;
+                }
+                .offer-section-3 {
+                    grid-area: C;
+                }
+            }
+        }
+        .registration-button {
+            margin-top: 7vh;
+            margin-bottom: 10vh;
+            button {
+                font-size: 130%;
             }
         }
     }
