--- a/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
@@ -18,15 +18,13 @@
             background-color: #cdcac7;
             border: 1px solid #cdcac7;
         }
-        .contact-content-sub-item:nth-child(2)
-        {
+        .contact-content-sub-item:nth-child(2) {
             margin-top: 1vh; /* dodělat mezery mezi inputy */
         }
         .contact-content-sub-item:nth-child(6) {
             border: 1px rgb(0, 38, 255) solid;
-            
-            input{
-                
+
+            input {
                 height: 15vh;
             }
         }
@@ -42,6 +40,50 @@
             font-size: 0.9rem;
             box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
             color: $general-background-color;
+        }
+    }
+}
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+    .contact-content-container {
+        height: 80vh;
+        .contact-content-sub-sub-container {
+            width: 70vw;
+            height: auto;
+            display: grid;
+            justify-items: center;
+            align-items: center;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            gap: ;
+            /* grid-template-areas:
+                "A A A A  B B B B"
+                "C C C C  D D D D"
+                "E E E E  E E E E"; */
+            /* grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(2, 1fr); */
+            .contact-content-sub-item:nth-child(1) {
+                /* grid-area: A; */
+                grid-area: 1 / 1 / 1 / 1;
+            }
+            .contact-content-sub-item:nth-child(2) {
+                /* grid-area: B; */
+                grid-area: 1 / 2 / 1 / 2;
+                /* border: 1px solid red;
+                padding: 1vh; */
+            }
+            .contact-content-sub-item:nth-child(3) {
+                /*  grid-area: C; */
+                grid-area: 2 / 1 / 2 / 1;
+            }
+            .contact-content-sub-item:nth-child(4) {
+                /*  grid-area: D; */
+                grid-area: 2 / 2 / 2 / 2;
+            }
+            .contact-content-sub-item:nth-child(5) {
+                /* grid-area: E;
+                width: fit-content; */
+                grid-area: 3 / 1 / 3 / span 2;
+            }
         }
     }
 }
