--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -723,4 +723,64 @@ footer .footer-information {
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
   color: #efeee9;
 }
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+  .contact-content-container {
+    height: 80vh;
+  }
+  .contact-content-container .contact-content-sub-sub-container {
+    width: 70vw;
+    height: auto;
+    display: -ms-grid;
+    display: grid;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+    /* grid-template-areas:
+                "A A A A  B B B B"
+                "C C C C  D D D D"
+                "E E E E  E E E E"; */
+    /* grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(2, 1fr); */
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(1) {
+    /* grid-area: A; */
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: 1 / 1 / 1 / 1;
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(2) {
+    /* grid-area: B; */
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: 1 / 2 / 1 / 2;
+    /* border: 1px solid red;
+                padding: 1vh; */
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(3) {
+    /*  grid-area: C; */
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: 2 / 1 / 2 / 1;
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(4) {
+    /*  grid-area: D; */
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: 2 / 2 / 2 / 2;
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(5) {
+    /* grid-area: E;
+                width: fit-content; */
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 3 / 1 / 3 / span 2;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
