--- a/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_contact-section-module.scss
@@ -7,6 +7,8 @@
     align-items: center; */
     height: 84vh;
     .contact-content-sub-container {
+        .contact-content-sub-sub-container {
+        }
         height: 75vh;
         display: flex;
         flex-direction: column;
@@ -18,12 +20,10 @@
             background-color: #cdcac7;
             border: 1px solid #cdcac7;
         }
-        .contact-content-sub-item:nth-child(2) {
+        .contact-content-sub-item:nth-child(1) {
             margin-top: 1vh; /* dodělat mezery mezi inputy */
         }
-        .contact-content-sub-item:nth-child(6) {
-            border: 1px rgb(0, 38, 255) solid;
-
+        .contact-content-sub-item:nth-child(5) {
             input {
                 height: 15vh;
             }
@@ -47,42 +47,33 @@
     .contact-content-container {
         height: 80vh;
         .contact-content-sub-sub-container {
-            width: 70vw;
+            width: 30vw;
             height: auto;
             display: grid;
             justify-items: center;
             align-items: center;
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            gap: ;
-            /* grid-template-areas:
-                "A A A A  B B B B"
-                "C C C C  D D D D"
-                "E E E E  E E E E"; */
-            /* grid-template-columns: repeat(3, 1fr);
-                grid-template-rows: repeat(2, 1fr); */
+            grid-template-rows: repeat(8, 1fr);
+            gap: 3vh 1vw;
             .contact-content-sub-item:nth-child(1) {
-                /* grid-area: A; */
                 grid-area: 1 / 1 / 1 / 1;
+                margin-top: 0;
             }
             .contact-content-sub-item:nth-child(2) {
-                /* grid-area: B; */
                 grid-area: 1 / 2 / 1 / 2;
-                /* border: 1px solid red;
-                padding: 1vh; */
             }
             .contact-content-sub-item:nth-child(3) {
-                /*  grid-area: C; */
                 grid-area: 2 / 1 / 2 / 1;
             }
             .contact-content-sub-item:nth-child(4) {
-                /*  grid-area: D; */
                 grid-area: 2 / 2 / 2 / 2;
             }
             .contact-content-sub-item:nth-child(5) {
-                /* grid-area: E;
-                width: fit-content; */
-                grid-area: 3 / 1 / 3 / span 2;
+                grid-area: 3 / 1 / span 8 / span 2;
+                input {
+                    width: 30vw;
+                    height: 30vh;
+                }
             }
         }
     }
