--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -313,7 +313,7 @@ body::-webkit-scrollbar {
     margin: 0;
   }
   .content-container .welcome-banner-container {
-    background-image: url("/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/index-welcome-beach.png");
+    background-image: url("images/index-welcome-beach.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -662,9 +662,6 @@ footer .footer-information {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  /* 
-    justify-content: center;
-    align-items: center; */
   height: 84vh;
 }
 
@@ -729,21 +726,29 @@ footer .footer-information {
     height: auto;
     display: -ms-grid;
     display: grid;
-    justify-items: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    /* justify-items: center;
+            align-items: center; */
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (1fr)[8];
-        grid-template-rows: repeat(8, 1fr);
-    gap: 3vh 1vw;
+    -ms-grid-rows: (1fr)[6];
+        grid-template-rows: repeat(6, 1fr);
+    /* gap: 2vh 1vw; */
+    row-gap: 2vh;
+    -webkit-column-gap: 1vw;
+            column-gap: 1vw;
+  }
+  .contact-content-container .contact-content-sub-sub-container input {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    border: 1px solid red;
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(1) {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     grid-area: 1 / 1 / 1 / 1;
     margin-top: 0;
+    border: 1px solid blue;
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(2) {
     -ms-grid-row: 1;
@@ -762,10 +767,11 @@ footer .footer-information {
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(5) {
     -ms-grid-row: 3;
-    -ms-grid-row-span: 8;
+    -ms-grid-row-span: 6;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
-    grid-area: 3 / 1 / span 8 / span 2;
+    grid-area: 3 / 1 / span 6 / span 2;
+    background-color: rgba(195, 42, 42, 0.575);
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(5) input {
     width: 30vw;
