--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -84,7 +84,7 @@
     .content-container {
         margin: 0;
         .welcome-banner-container {
-            background-image: url("images/index-welcome-beach.png");
+            background-image: url("index-welcome-beach.png");
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
