--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -313,7 +313,7 @@ body::-webkit-scrollbar {
     margin: 0;
   }
   .content-container .welcome-banner-container {
-    background-image: url("images/index-welcome-beach.png");
+    background-image: url("index-welcome-beach.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
