--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -344,7 +344,7 @@ body::-webkit-scrollbar {
     font-size: 300%;
   }
   .content-container .welcome-banner-container .welcome-banner p {
-    margin: 0.2em;
+    margin: 0.2em .8em .2em .8em;
     font-size: 140%;
   }
   .content-container .welcome-banner-container .welcome-banner button {
@@ -721,11 +721,18 @@ footer .footer-information {
   .contact-content-container {
     height: 80vh;
   }
+  .contact-content-container .registration-button-contact {
+    margin-top: 2em;
+    margin-bottom: 10vh;
+  }
   .contact-content-container .contact-content-sub-sub-container {
-    width: 30vw;
+    width: 35vw;
     height: auto;
     display: -ms-grid;
     display: grid;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     /* justify-items: center;
             align-items: center; */
     -ms-grid-columns: (1fr)[2];
@@ -738,9 +745,9 @@ footer .footer-information {
             column-gap: 1vw;
   }
   .contact-content-container .contact-content-sub-sub-container input {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
     border: 1px solid red;
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(1) {
@@ -754,16 +761,19 @@ footer .footer-information {
     -ms-grid-row: 1;
     -ms-grid-column: 2;
     grid-area: 1 / 2 / 1 / 2;
+    border: 1px solid blue;
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(3) {
     -ms-grid-row: 2;
     -ms-grid-column: 1;
     grid-area: 2 / 1 / 2 / 1;
+    border: 1px solid blue;
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(4) {
     -ms-grid-row: 2;
     -ms-grid-column: 2;
     grid-area: 2 / 2 / 2 / 2;
+    border: 1px solid blue;
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(5) {
     -ms-grid-row: 3;
@@ -771,11 +781,10 @@ footer .footer-information {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: 3 / 1 / span 6 / span 2;
-    background-color: rgba(195, 42, 42, 0.575);
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(5) input {
-    width: 30vw;
-    height: 30vh;
+    width: 35vw;
+    height: 20vh;
   }
 }
 /*# sourceMappingURL=styles.css.map */
