--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -1,7 +1,4 @@
 .nav-bar-container {
-    button {
-        display: none;
-    }
     /* position: relative;
     z-index: 9; */
     height: 8vh; /* malý kousek pod - max-height */
@@ -10,13 +7,26 @@
     flex-direction: column;
     justify-content: center;
     .nav-bar-sub-container {
+        .nav-icon{
+            img{
+                min-width: 100%;
+                height: 90%;
+            }
+        }
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        height: 80px;
+        align-items: center;        
         margin: 0 1.6em 0 1.6em;
-
+        .button-contaier {
+            /* display: none; */
+            position: relative;
+            z-index: 8;
+            .buttons {
+            }
+        }
         .nav-button {
+            position: relative;
+            z-index: 9;
             .line-container {
                 width: 60px;
                 display: block;
@@ -54,8 +64,11 @@
 @media only screen and (min-width: 1600px) and (min-height: 720px) and (orientation: landscape) {
     .nav-bar-container {
         height: 10vh;
+        .nav-button {
+            display: none;
+        }
     }
     button {
-        background-color: rgba(0, 0, 0, 0);
+        background-color: rgba(0, 0, 0, 1);
     }
 }
