--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -6,22 +6,27 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     .nav-bar-sub-container {
-        .nav-icon{
-            img{
+        .nav-icon {
+            img {
                 min-width: 100%;
                 height: 90%;
             }
         }
         display: flex;
         justify-content: space-between;
-        align-items: center;        
+        align-items: center;
         margin: 0 1.6em 0 1.6em;
         .button-contaier {
             /* display: none; */
             position: relative;
             z-index: 8;
             .buttons {
+                button {
+                    background-color: rgba(0, 0, 0, 0);
+                    border: 1px solid red;
+                }
             }
         }
         .nav-button {
