--- a/individual-work/pitra-2k-web-figma-1/styles/_header.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_header.scss
@@ -6,7 +6,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    button {
+        background-color: rgba(0, 0, 0, 0);
+        border: 1px solid rgba(0, 0, 0, 0);
+        color: $general-text-color-black;
+        font-size: 1.2rem;
+        font-weight: 600;
+        padding: 8px;
+        border-radius: 2px;
+        transition-duration: .3s;
+        &:hover {
+            transition-duration: .3s;
+            background-color: rgba(0, 0, 0, 0.2);
+        }
+    }
     .nav-bar-sub-container {
         .nav-icon {
             img {
@@ -17,16 +30,12 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 0 1.6em 0 1.6em;
+        margin: 0 3% 0 3%;
         .button-contaier {
             /* display: none; */
             position: relative;
             z-index: 8;
             .buttons {
-                button {
-                    background-color: rgba(0, 0, 0, 0);
-                    border: 1px solid red;
-                }
             }
         }
         .nav-button {
@@ -69,11 +78,12 @@
 @media only screen and (min-width: 1600px) and (min-height: 720px) and (orientation: landscape) {
     .nav-bar-container {
         height: 10vh;
-        .nav-button {
-            display: none;
+        .nav-bar-sub-container{
+            
+            .nav-button {
+                display: none;
+            }
         }
-    }
-    button {
-        background-color: rgba(0, 0, 0, 1);
+       
     }
 }
