--- a/individual-work/pitra-2k-web-figma-1/styles/_section.scss
+++ b/individual-work/pitra-2k-web-figma-1/styles/_section.scss
@@ -72,8 +72,8 @@
     margin-bottom: 2.3em;
     button {
         padding: 1% 1.5em 1% 1.5em;
-        background-color: #a19b98;
-        border: #a19b98 1px solid;
+        background-color: $button-bg-color;
+        border: $button-bg-color 1px solid;
         font-size: 0.9rem;
         box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
         color: $general-background-color;
