--- a/individual-work/pitra-2k-web-figma-1/styles/styles.css
+++ b/individual-work/pitra-2k-web-figma-1/styles/styles.css
@@ -42,13 +42,13 @@ body::-webkit-scrollbar {
   font-weight: 600;
   padding: 8px;
   border-radius: 2px;
-  -webkit-transition-duration: .3s;
-          transition-duration: .3s;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 .nav-bar-container button:hover {
-  -webkit-transition-duration: .3s;
-          transition-duration: .3s;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -68,12 +68,6 @@ body::-webkit-scrollbar {
 .nav-bar-container .nav-bar-sub-container .nav-icon img {
   min-width: 100%;
   height: 90%;
-}
-
-.nav-bar-container .nav-bar-sub-container .button-contaier {
-  /* display: none; */
-  position: relative;
-  z-index: 8;
 }
 
 .nav-bar-container .nav-bar-sub-container .nav-button {
@@ -115,12 +109,23 @@ body::-webkit-scrollbar {
   width: 30px;
 }
 
+.nav-bar-container .nav-bar-sub-container .buttons-contaier {
+  /* display: none; */
+  position: relative;
+  z-index: 8;
+}
+
 @media only screen and (min-width: 1600px) and (min-height: 720px) and (orientation: landscape) {
   .nav-bar-container {
     height: 10vh;
   }
   .nav-bar-container .nav-bar-sub-container .nav-button {
     display: none;
+  }
+  .nav-bar-container .buttons-contaier {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
@@ -156,8 +161,8 @@ body::-webkit-scrollbar {
 .content-container .welcome-banner button {
   margin: 1.1em;
   padding: 1% 1.5em 1% 1.5em;
-  background-color: #a19b98;
-  border: #a19b98 1px solid;
+  background-color: #7c7474;
+  border: #7c7474 1px solid;
   font-size: 0.9rem;
   -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
@@ -329,8 +334,8 @@ body::-webkit-scrollbar {
 
 .registration-button button {
   padding: 1% 1.5em 1% 1.5em;
-  background-color: #a19b98;
-  border: #a19b98 1px solid;
+  background-color: #7c7474;
+  border: #7c7474 1px solid;
   font-size: 0.9rem;
   -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
@@ -472,9 +477,9 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
 }
 
 footer .footer-information {
@@ -738,8 +743,8 @@ footer .footer-information {
 
 .contact-content-container .registration-button-contact button {
   padding: 1% 1.5em 1% 1.5em;
-  background-color: #a19b98;
-  border: #a19b98 1px solid;
+  background-color: #7c7474;
+  border: #7c7474 1px solid;
   font-size: 0.9rem;
   -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
